# AMBER

./: MID360_config.json  cameraControl.py  cloud_merger.cpp  crop_and_grid.py  generate_masks.py  go2_relay.cpp  load_lidar.py  nnTest.py  poissonCFPlot.py  poissonLocalViz.py  poissonMPC.py  poissonRT.py  poissonSub.py  poissonTAM.py  poissonTAM_HD.py  poissonYawPlot.py  poisson_experiment_g1.cpp  poisson_experiment_go2.cpp  ros_gridding.py  utils.py
Poisson/: CMakeLists.txt
Poisson/inc/: kernel.hpp
Poisson/src/: main.cpp  utils.cpp
Poisson3D/: CMakeLists.txt
Poisson3D/inc/: kernel.hpp  utils.h
Poisson3D/src/: kernel.cu  main.cpp
PoissonController/: CMakeLists.txt
PoissonController/inc/: kernel.hpp  poisson.h  utils.h
PoissonController/src/: kernel.cu  main.cpp  utils.cpp
PoissonControllerMPC/: CMakeLists.txt
PoissonControllerMPC/inc/: mpc_cbf.h  poisson.h  utils.h
PoissonControllerMPC/src/: kernel.cu  main.cpp  utils.cpp
PoissonCrazyflie/: CMakeLists.txt
PoissonCrazyflie/inc/: mpc_cbf.h  poisson.h  utils.h
PoissonCrazyflie/src/: kernel.cu  main.cpp  utils.cpp
PoissonLocal/: CMakeLists.txt
PoissonLocal/inc/: cloud_merger.h  mpc_cbf_3d.h  poisson.h  utils.h
PoissonLocal/src/: kernel.cu  main.cpp  poisson.cpp  teleop.cpp  utils.cpp
PoissonOnboard/: CMakeLists.txt  kernel.cu  main.cpp  mpc_cbf.h  poisson.h
PoissonTRO/: CMakeLists.txt
PoissonTRO/inc/: mpc_cbf.h  poisson.h  utils.h
PoissonTRO/src/: kernel.cu  main.cpp
PoissonYaw/: CMakeLists.txt
PoissonYaw/inc/: kernel.hpp  mpc_cbf.h  poisson.h  utils.h
PoissonYaw/src/: kernel.cu  main.cpp  utils.cpp
RAL2025/: CMakeLists.txt  cloud_merger.cpp  mpc_cbf_2d.h  mpc_cbf_3d.h  poisson.cpp  poisson.h  utils.cpp  utils.h
bena_cpp/: CMakeCache.txt  Makefile  camera_control.py  cmake_install.cmake  forcing_function.csv  gmon.out  guidance_field_x.csv  guidance_field_y.csv  occupancy_map.csv  output_matrix.csv  plot.py  poisson  poisson_safe_set.csv  sdf_safe_set.csv
bena_cpp/Poisson/: CMakeLists.txt
bena_cpp/Poisson/inc/: Types.h
bena_cpp/Poisson/src/: kernel.cu  main.cpp
bena_python/: PoissonSafeSet.py  PoissonSafeSetMulticore.py
poisson_simple/src/: CMakeLists.txt  package.xml
poisson_simple/src/include/: kernel.hpp  mpc_cbf_3d.h  poisson.h
poisson_simple/src/src/: cloud_merger.cpp  poisson.cpp  utils.cpp
